test/trivial/bradc/vardecls1a.good
Error: Variable 'x' used before it is defined (vardecls1a.chpl:9)

